--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 2026-01-01
+  Changes:
+    - More starting ships added.
+    - 添加了更多的起始飞船。
+
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025-12-30
   Changes:
