--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: 2026-01-01
+  Changes:
+    - remove dependency elevated-rails.
+    - 移除对 elevated-rails 的依赖。
+
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2026-01-01
   Changes:
